<resources>
    <string name="app_name">Swoosh</string>
    <string name="desired_league">Desired League</string>
    <string name="mens_off">Men\'s</string>
    <string name="mens_on">Men\'s</string>
    <string name="mens">Men\'s</string>
    <string name="womens">Women\'s</string>
    <string name="womens_off">Women\'s</string>
    <string name="womens_on">Women\'s</string>
    <string name="mixed">Mixed</string>
    <string name="mixed_on">Mixed</string>
    <string name="mixed_off">Mixed</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league
    </string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="background_image1">background image</string>
    <string name="swoosh_logo">swoosh logo</string>
    <string name="background_image2">background image</string>
    <string name="background_image3">background image3</string>
    <string name="i_am_a">I am a</string>
    <string name="finish">FINISH</string>
    <string name="beginner">Beginner</string>
    <string name="beginner_off">Beginner</string>
    <string name="beginner_on">Beginner</string>
    <string name="baller">Baller</string>
    <string name="baller_off">Baller</string>
    <string name="baller_on">Baller</string>
    <string name="background_image4">background image4</string>
    <string name="looking_for_a_women_s_beginner_league_near_you">Looking for a women\'s beginner league near you ...
    </string>
</resources>
