<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/backgroundPage2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/background_image2"/>
    <ImageView
            android:layout_width="91dp"
            android:layout_height="34dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/swooshLogo" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="@+id/backgroundPage2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498" android:scaleType="center"
            android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/swooshLogo"
            android:textSize="18sp" android:fontFamily="@font/montserrat"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_width="361dp">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/mensToggleButton" android:textOff="@string/mens_off"
                android:textOn="@string/mens_on" tools:text="Men's" android:fontFamily="@font/montserrat"
                android:textSize="18sp" android:textColor="@android:color/white"
                android:background="@drawable/swoosh_toggle"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/womensToggleButton"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textOff="@string/womens_off" android:textOn="@string/womens_on"
                tools:text="Women's" android:textColor="@android:color/white" android:fontFamily="@font/montserrat"
                android:textSize="18sp" android:background="@drawable/swoosh_toggle"/>
        <ToggleButton
                android:text="@string/mixed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/mixedToggleButton" android:textOff="@string/mixed_off"
                android:textOn="@string/mixed_on" tools:text="Mixed" android:fontFamily="@font/montserrat"
                android:textSize="18sp" android:textColor="@android:color/white"
                android:background="@drawable/swoosh_toggle"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="339dp"
            android:layout_height="34dp"
            android:id="@+id/nextBtn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" tools:text="Next"
            android:textColor="@color/colorAccent" android:background="@drawable/swoosh_button" android:textSize="18sp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="@+id/backgroundPage2"
            android:fontFamily="@font/montserrat" android:onClick="nextClicked"/>
</android.support.constraint.ConstraintLayout>