<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.LevelActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/backgroundPage3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" android:contentDescription="@string/background_image3"/>
    <ImageView
            android:layout_width="91dp"
            android:layout_height="34dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/swooshLogo" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="@+id/backgroundPage3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498" android:scaleType="center"
            android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/swooshLogo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@android:color/white" android:textSize="18sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerButton" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:layout_marginEnd="16dp" android:textOff="@string/beginner_off"
                android:textOn="@string/beginner_on" android:layout_marginRight="16dp" tools:ignore="RtlHardcoded"
                android:onClick="onBeginnerClick"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerButton" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textOff="@string/baller_off" android:textOn="@string/baller_on"
                android:layout_marginStart="16dp" android:layout_marginLeft="16dp" tools:ignore="RtlHardcoded"
                android:onClick="onBallerClick"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="339dp"
            android:layout_height="34dp"
            android:id="@+id/finishBtn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" tools:text="Finish"
            android:textColor="@color/colorAccent" android:background="@drawable/swoosh_button" android:textSize="18sp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="@+id/backgroundPage3"
            android:fontFamily="@font/montserrat" android:onClick="onFinishClicked"/>
</android.support.constraint.ConstraintLayout>